--- a/assets/templates/manage.html
+++ b/assets/templates/manage.html
@@ -15,37 +15,51 @@
 </head>
 
 <body>
+<nav class="navbar navbar-default navbar-fixed-top" style="opacity: .9" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Home</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a class="navbar-brand" href="javascript:newPost();">
+                        <span class="glyphicon glyphicon-plus"></span> New
+                    </a>
+                </li>
+                <li>
+                    <a role="menuitem" href="javascript:toSettings();">
+                        <span class="glyphicon glyphicon-pencil"></span> Settings
+                    </a>
+                </li>
+                <li>
+                    <a role="menuitem" href="javascript:toHome();">
+                        <span class="glyphicon  glyphicon-home"></span> Home
+                    </a>
+                </li>
+                <li>
+                    <a role="menuitem" href="javascript:logOut();">
+                        <span class="glyphicon  glyphicon-arrow-left"></span> Logout
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 <div class="container" style="margin-top: 5%; width: 95%">
-    <div class="panel">
+    <div class="panel panel-primary">
         <div class="panel-heading">
-            <div class="dropdown" style="margin-left: 90%">
-                <span class="glyphicon glyphicon-cog dropdown-toggle" data-toggle="dropdown"></span>
-                <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="dropdownMenu1">
-                    <li role="presentation">
-                        <a role="menuitem" href="javascript:newPost();">
-                            <span class="glyphicon glyphicon-plus"></span> New
-                        </a>
-                    </li>
-                    <li role="presentation" class="divider"></li>
-                    <li role="presentation">
-                        <a role="menuitem" href="javascript:toSettings();">
-                            <span class="glyphicon glyphicon-pencil"></span> Settings
-                        </a>
-                    </li>
-                    <li role="presentation" class="divider"></li>
-                    <li role="presentation">
-                        <a role="menuitem" href="javascript:toHome();">
-                            <span class="glyphicon  glyphicon-home"></span> Home
-                        </a>
-                    </li>
-                    <li role="presentation" class="divider"></li>
-                    <li role="presentation">
-                        <a role="menuitem" href="javascript:logOut();">
-                            <span class="glyphicon  glyphicon-arrow-left"></span> Logout
-                        </a>
-                    </li>
-                </ul>
-            </div>
+            <h3 class="panel-title" style="text-align: center">
+                Posts
+            </h3>
         </div>
         <div class="panel-body">
             <table class="table">
