--- a/assets/templates/home.html
+++ b/assets/templates/home.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <script src="https://cdn.bootcss.com/jquery/2.2.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/static/js/jquery/jquery.min.js"></script>
+    <script src="/static/js/bootstrap/bootstrap.min.js"></script>
+    <link href="/static/js/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/home.css" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" href="/static/favicon.png">
     <title>{{.Title}}</title>
