--- a/assets/templates/article.html
+++ b/assets/templates/article.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <script src="/static/js/jquery/jquery.min.js"></script>
-    <script src="/static/js/bootstrap/bootstrap.min.js"></script>
-    <link href="/static/js/bootstrap/bootstrap.min.css" rel="stylesheet">
-    <script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+    <script src="//cdn.jsdelivr.net/npm/bootstrap@3.3.1/dist/js/bootstrap.min.js"></script>
+    <link href="//cdn.jsdelivr.net/npm/bootstrap@3.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script async src="//cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
         MathJax.Hub.Config({
             tex2jax: {inlineMath: [['\\(','\\)']]}
         });
