--- a/assets/templates/edit.html
+++ b/assets/templates/edit.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <script src="/static/js/jquery/jquery.min.js"></script>
-    <script src="/static/js/bootstrap/bootstrap.min.js"></script>
-    <link href="/static/js/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <script src="//cdn.jsdelivr.net/npm/bootstrap@3.3.1/dist/js/bootstrap.min.js"></script>
+    <link href="//cdn.jsdelivr.net/npm/bootstrap@3.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
         MathJax.Hub.Config({
             tex2jax: {inlineMath: [['\\(','\\)']]}
@@ -50,7 +50,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Home</a>
+            <a class="navbar-brand" href="/">Home</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
