--- a/assets/templates/home.html
+++ b/assets/templates/home.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <script src="/static/js/jquery/jquery.min.js"></script>
-    <script src="/static/js/bootstrap/bootstrap.min.js"></script>
-    <link href="/static/js/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <script src="//cdn.jsdelivr.net/npm/bootstrap@3.3.1/dist/js/bootstrap.min.js"></script>
+    <link href="//cdn.jsdelivr.net/npm/bootstrap@3.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/home.css" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" href="/static/favicon.png">
     <title>{{.Title}}</title>
@@ -28,13 +28,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Home</a>
+            <a class="navbar-brand" href="#">{{.Title}}</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 {{range .Navis.Navis}}
-                    <li><a class="navbar-brand" href="//{{.Target}}">{{.Name}}</a></li>
+                    <li><a class="navbar-brand" href="{{.Target}}">{{.Name}}</a></li>
                 {{end}}
             </ul>
         </div>
