--- a/assets/templates/login.html
+++ b/assets/templates/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <script src="/static/js/jquery/jquery.min.js"></script>
-    <script src="/static/js/bootstrap/bootstrap.min.js"></script>
-    <link href="/static/js/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <script src="//cdn.jsdelivr.net/npm/bootstrap@3.3.1/dist/js/bootstrap.min.js"></script>
+    <link href="//cdn.jsdelivr.net/npm/bootstrap@3.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="/static/favicon.png">
     <title>{{ .Title }}</title>
     <style>
