--- a/assets/templates/manage.html
+++ b/assets/templates/manage.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <script src="/static/js/jquery/jquery.min.js"></script>
-    <script src="/static/js/bootstrap/bootstrap.min.js"></script>
-    <link href="/static/js/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <script src="//cdn.jsdelivr.net/npm/bootstrap@3.3.1/dist/js/bootstrap.min.js"></script>
+    <link href="//cdn.jsdelivr.net/npm/bootstrap@3.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="/static/favicon.png">
     <title>{{ .Title }}</title>
     <style>
@@ -24,7 +24,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Home</a>
+            <a class="navbar-brand" href="javascript:toHome();">Home</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -37,11 +37,6 @@
                 <li>
                     <a role="menuitem" href="javascript:toSettings();">
                         <span class="glyphicon glyphicon-pencil"></span> Settings
-                    </a>
-                </li>
-                <li>
-                    <a role="menuitem" href="javascript:toHome();">
-                        <span class="glyphicon  glyphicon-home"></span> Home
                     </a>
                 </li>
                 <li>
