--- a/assets/templates/article.html
+++ b/assets/templates/article.html
@@ -58,6 +58,18 @@
     function toHome() {
         window.location.href = "/"
     }
+
+    function sendCount(id) {
+        fetch(`/article/${id}`, {method: 'PUT'}).then(function(j) {
+            return j.text();
+        }).then(function(res) {
+            console.log(res);
+        }).catch(function(e) {
+            console.log(e);
+        });
+    }
+
+    setTimeout(sendCount({{.Post.Id}}), 1000);
 </script>
 <script>hljs.initHighlightingOnLoad();</script>
 </body>
