add necessary text when glyhpicon is not available

--- a/assets/templates/setting.html
+++ b/assets/templates/setting.html
@@ -19,7 +19,7 @@
     <div class="panel">
         <div class="panel-heading">
             <div class="dropdown" style="margin-left: 90%">
-                <span class="glyphicon glyphicon-cog dropdown-toggle" data-toggle="dropdown"></span>
+                <span class="glyphicon glyphicon-cog dropdown-toggle" data-toggle="dropdown">Menu</span>
                 <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="dropdownMenu1">
                     <li role="presentation">
                         <a role="menuitem" href="javascript:toHome();">
