--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -32,38 +32,47 @@ P, li {
 
 H1 {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+    font-size: 32px;
+    font-weight: bold;
+    color: #000;
 }
 
 H2 {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+    font-weight: bold;
+    font-size: 28px;
     margin-bottom: 60px;
     margin-bottom: 40px;
     padding: 5px;
     border-bottom: 2px LightGrey solid;
     width: 98%;
     line-height: 150%;
-    color: #666666;
+    color: #000;
 }
 
 H3 {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+    font-weight: bold;
+    font-size: 24px;
     margin-top: 20px;
     margin-bottom: 10px;
     border-bottom: 1px LightGrey solid;
     width: 98%;
     line-height: 120%;
-    color: #666666;
+    color: #000;
 }
 
 
 H4 {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+    font-weight: bold;
+    font-size: 20px;
     margin-top: 40px;
     margin-bottom: 30px;
     border-bottom: 1px LightGrey solid;
     width: 98%;
     line-height: 150%;
-    color: #666666;
+    color: #000;
 }
 
 .box {
@@ -91,7 +100,7 @@ pre {
     background-color: #F4F4F4;
     border: 1px solid #E0E0E0;
     border-radius: 4px;
-    padding: 5px;
+    padding: 0px;
     line-height: 1.3;
 
     display: block;
@@ -125,13 +134,13 @@ img {
     max-height: 100%;
     max-width: 100%;
     display: block;
-    box-shadow: 0 0 10px #555;
-    border-radius: 6px;
+    box-shadow: 0 0 2px #555;
+    border-radius: 3px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
     margin-bottom: 10px;
-    -webkit-box-shadow: 0 0 10px #555;
+    -webkit-box-shadow: 0 0 2px #555;
 }
 
 img.displayed {
@@ -207,6 +216,14 @@ body.mobile div.inner {
 .navbar-brand {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
     font-size: 100%;
+}
+
+code {
+	padding: 2px 4px;
+	font-size: 90%;
+	color: #000;
+	background-color: #f2f5f5;
+	border-radius: 4px;
 }
 
 table {
